Vache fix view wrap prblm

--- a/public/css/user/cow/view.css
+++ b/public/css/user/cow/view.css
@@ -65,6 +65,7 @@
     .cow-view-page-box {
         flex-direction: row;
         flex-wrap: wrap;
+        justify-content: center;
     }
     .cow-view-setting-box {
         width: 400px;
@@ -88,15 +89,16 @@
 }
 @media screen and (min-width: 1200px) {
     .cow-view-page-box {
-        display: flex;
-        justify-content: space-around;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
     }
     .cow-view-setting-box {
         width: 360px;
         height: 110px;
     }
     .cow-view-add-box {
-        width: 360px;
+        width: 300px;
         height: 100px;
     }
     .cow-view-add-box a {
@@ -117,8 +119,8 @@
         height: 40px;
     }
     .cow-view-add-box img {
-        width: 40px;
-        height: 40px;
+        width: 35px;
+        height: 35px;
     }
     .cow-view-add-box p {
         font-size: 22px;
